updated svelte and skeleton version

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,9 +1,13 @@
-/*place global styles here */
-html,
-body {
-	@apply h-full;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@tailwind variants;
+
+html, body {
+	height: 100%;
 }
 
+/* vintage theme */
 @font-face {
 	font-family: 'Abril Fatface';
 	src: url('/fonts/AbrilFatface.ttf');
